# teleop

./: .gitignore  .prettierrc  MANUAL.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
reachy_mini_phone_teleop/: README.md  action_library.py  actions.py  camera.py  constants.py  controller.py  events.py  logger.py  main.py
reachy_mini_phone_teleop/data/control_logs/: 20260310_191649.jsonl
reachy_mini_phone_teleop/docs/: temp.md
reachy_mini_phone_teleop/web/: ActionHandler.js  App.js  JoystickController.js  Kinematics.js  Orientation.js  RobotManager.js  SceneManager.js  index.html  styles.css
