[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-phone-teleop"
version = "0.1.1"
description = "Phone teleoperation app for Reachy Mini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini>=1.5.1",
    "teleop"
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy-mini-phone-teleop = "reachy_mini_phone_teleop.app:ReachyMiniPhoneTeleop"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
